// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render <HabitCard /> correctly 1`] = `
<div>
  <div
    class="card mt-4"
  >
    <div
      class="card-header text-monospace d-flex justify-content-between"
    >
      <span
        class="d-flex"
      >
        <a
          href="/habits/0015799f-e142-4442-8dbf-b8f1244cee28"
        >
          <i
            class="fa"
          />
        </a>
        <i
          class="fa"
        />
      </span>
      <span>
        <span
          class="font-weight-bold"
        >
          Expired
        </span>
      </span>
    </div>
    <div
      class="card-body d-flex justify-content-between"
    >
      <h5
        class="card-title d-flex align-items-center mb-0 text-monospace font-weight-bold"
      >
        New habit
      </h5>
      <button
        type="button"
        class="btn btn-secondary"
        data-testid="activate-habit-button"
      >
        Stop
      </button>
    </div>
  </div>
</div>
`;

exports[`should render <HabitCard /> correctly 2`] = `
<div>
  <div
    class="card mt-4"
  >
    <div
      class="card-header text-monospace d-flex justify-content-between"
    >
      <span
        class="d-flex"
      >
        <a
          href="/habits/0015799f-e142-4442-8dbf-b8f1244cee28"
        >
          <i
            class="fa"
          />
        </a>
        <i
          class="fa"
        />
      </span>
      <span>
        <span
          class="text-muted font-italic"
        >
          Expires in 
        </span>
        <span
          class="font-weight-bold"
        >
          47 hours
        </span>
      </span>
    </div>
    <div
      class="card-body d-flex justify-content-between"
    >
      <h5
        class="card-title d-flex align-items-center mb-0 text-monospace font-weight-bold"
      >
        New habit
      </h5>
      <button
        type="button"
        class="btn btn-secondary"
        data-testid="activate-habit-button"
      >
        Stop
      </button>
    </div>
  </div>
</div>
`;
